Koush broke my cache!!!
Change-Id: Ia5796146de1b876772ea1ca487f43d3e933862da

Conflicts:
	packages/SystemUI/src/com/android/systemui/recent/RecentsPanelView.java